deployment/not-used/istio-gateway/gateway-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travelgateway
  namespace: travel-control
spec:
  selector:
    matchLabels:
      istio: travelgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway 
      labels:
        istio: travelgateway
        sidecar.istio.io/inject: "true" 
        app: travelgateway
    spec:
      containers:
        - name: istio-proxy
          image: auto 
          securityContext:
            capabilities:
              drop:
              - ALL
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
          - containerPort: 15090
            protocol: TCP
            name: http-envoy-prom
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      serviceAccountName: secret-reader 
---
apiVersion: v1
kind: Service
metadata:
  name: travelgateway
  namespace: travel-control
spec:
  type: ClusterIP 
  selector:
    istio: travelgateway
  ports:
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    - name: http2
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
